# mini-riscv-os

./: .gitignore  Cargo.toml  Makefile  shell.nix  tty_send.sh
mini-prog/: Makefile  prog.c  syscalls.h
src/: bios_interface.rs  edit_line.rs  elf.rs  file_system.rs  lib.rs  memory.ld  panic.rs  print.rs  start.s  sys_call.rs  xmodem.rs
syscall/src/: lib.rs
syslib/: Cargo.toml
syslib/src/: print.rs
usb-prog/: Cargo.toml  Makefile  link.ld
usb-prog/.cargo/: config
usb-prog/src/: main.rs
