[package]
name = "mini-riscv-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syslib = { path = "syslib" }

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"
